--- a/base_partner_sequence/i18n/de.po
+++ b/base_partner_sequence/i18n/de.po
@@ -3,19 +3,19 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: OpenERP Server 7.0-20131013-231025\n"
+"Project-Id-Version: ODOO 8.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-13 13:47+0000\n"
-"PO-Revision-Date: 2013-11-13 13:47+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2015-08-27 16:18+0200\n"
+"Last-Translator: Rudolf Schnapka <rs@techno-flex.de>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Language: de\n"
+"X-Generator: Poedit 1.8.4\n"
 
 #. module: base_partner_sequence
 #: model:ir.model,name:base_partner_sequence.model_res_partner
 msgid "Partner"
 msgstr "Partner"
-
